--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+.navbar {
+  display: flex;
+  position: sticky;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px 0 10px 40px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px 0 rgb(21 24 26 / 10%);
+}
+
+.navbar-nav {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-item {
+  display: list-item;
+  list-style: none;
+}
+
+.navbar-link {
+  display: block;
+  color: #676767;
+  padding: 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.navbar-link:hover {
+  color: #09a3a4;
+}
+
+.img-logo {
+  display: block;
+  width: 120px;
+  margin: 0 40px;
+}
+
+.main-title {
+  display: block;
+  width: 100%;
+  margin: 40px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 40px;
+  font-weight: bolder;
+  color: #445f89;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  color: #676767;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  border: 2px solid;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.2s all;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-button {
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.main-search {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.search-input {
+  display: block;
+  width: 85%;
+}
+
+.search-button {
+  padding: 10px 25px;
+  border-color: #09a3a4;
+  color: #09a3a4;
+  background-color: #fff;
+}
+
+.search-button:hover {
+  background-color: #09a3a4;
+  color: #fff;
+}
+
+.create-button {
+  border-color: #445f89;
+  color: #fff;
+  background-color: #445f89;
+}
+
+.create-button:hover {
+  background-color: #304464;
+  border-color: #304464;
+}
+
+.update-button {
+  border-color: #09a3a4;
+  color: #fff;
+  background-color: #09a3a4;
+}
+
+.update-button:hover {
+  background-color: #128a8a;
+  border-color: #128a8a;
+}
+
+.delete-button {
+  border-color: #f05656;
+  color: #fff;
+  background-color: #f05656;
+}
+
+.delete-button:hover {
+  border-color: #e04138;
+  background-color: #e04138;
+}
+
+.create-form {
+  width: 320px;
+}
+
+.form-label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  font-family: 'Open Sans', sans-serif;
+  color: #09a3a4;
+}
+
+.form-input {
+  display: block;
+  margin-bottom: 16px;
+  padding: 10px;
+  width: 100%;
+  border: 2px solid;
+  border-radius: 5px;
+}
+
+.form-button {
+  padding: 10px 25px;
+  margin-right: 20px;
 }
